files/script/test_all/parse_error/var/test_var_error3.ll


def main()
{
    var 32 = 100I12

}
#script("script/test_all/parse_error/var/test_var_error3.ll")